--- a/src/components/AudioPlayer/audio-player.scss
+++ b/src/components/AudioPlayer/audio-player.scss
@@ -73,16 +73,16 @@
   }
 
   &__progress {
-    --bar-bg: var(--dark);
+    --bar-bg: white;
     --seek-before-width: 0;
     --seek-before-color: var(--primary);
-    --playhead: var(--light);
+    --playhead: var(--dark);
     --playhead-selected: var(--darkest);
 
     appearance: none;
     background: var(--bar-bg);
     border-radius: 10px;
-    outline: none;
+    outline: 1px solid var(--dark);
     width: 100%;
     height: 11px;
     position: relative;
