--- a/src/components/ReactiveCanvasOne/reactive-canvas-one.scss
+++ b/src/components/ReactiveCanvasOne/reactive-canvas-one.scss
@@ -1,4 +1,41 @@
-.canvas-container {
-    width: 100%;
-    border-radius:10px;
+@use "../../styles/variables.scss"as *;
+@use "../../styles/mixins.scss"as mixin;
+
+
+.reactive-canvas{
+
+    &__container {
+        width: 100%;
+        height: 100%;
+        border-radius:10px;
+    }
+
+    &__controls {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        
+    }
+
+    &__logo-card {
+        @include mixin.audio-card;
+        background-color: var(--dark);
+    }
+
+    &__logo {
+        width: 150px;
+    }
+
+    
 }
+
+.dg.main  {
+    width: 100% !important;
+}
+
+
+
+
+
+
+
