--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -6,10 +6,12 @@
   align-items: center;
   justify-content: center;
   width: 400px;
-  height: 200px;
+  height: auto;
   background-color: var(--light);
   padding: 20px 20px;
   border-radius: 10px;
+  border: 1px solid var(--dark);
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; 
 }
 
 @mixin audio-card-nav {
