--- a/src/components/AudioUploader/audio-uploader.scss
+++ b/src/components/AudioUploader/audio-uploader.scss
@@ -13,4 +13,10 @@
   &__options {
     @include mixin.audio-card-nav;
   }
+
+  &__icon:hover {
+    color: var(--primary);
+    cursor: pointer;
+    transform: scale(1.1)
+  }
 }
