--- a/src/components/ReactiveCanvasOne/reactive-canvas-one.scss
+++ b/src/components/ReactiveCanvasOne/reactive-canvas-one.scss
@@ -15,6 +15,7 @@
         flex-direction: column;
         max-width: 400px;
         gap: 1rem;
+        background-color: #000000;
         
     }
 
