--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -5,8 +5,10 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: var(--light);
+  background-color: black;
+  color: white;
   padding: 20px 20px;
+  gap: 1rem;
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; 
 }
